--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "price-list-app",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api/index.js",
+  "dependencies": {
+    "express": "^4.21.2",
+    "ejs": "^3.1.10",
+    "mongoose": "^7.8.7",
+    "body-parser": "^1.20.3"
+  },
   "scripts": {
     "start": "node app.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "mongoose": "^7.8.7"
   },
   "description": "",
   "repository": {
