--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "api/index.js",
   "dependencies": {
-    "express": "^4.21.2",
+    "body-parser": "^1.20.3",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
-    "mongoose": "^7.8.7",
-    "body-parser": "^1.20.3"
+    "express": "^4.21.2",
+    "mongoose": "^7.8.7"
   },
   "scripts": {
     "start": "node app.js"
