--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://shastri:Shastri7102@cluster0.3fnyzv1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+Name: MONGO_URL
+Value: mongodb+srv://shastri:Shastri7102@cluster0.3fnyzv1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
